--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./vars.css">
-  <link rel="stylesheet" href="./style.css">
-  
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/static/vars.css" />
+  <link rel="stylesheet" href="/static/style.css" />
   
   <style>
    a,
@@ -25,31 +24,31 @@
        border: none;
        text-decoration: none;
        background: none;
-   
+
        -webkit-font-smoothing: antialiased;
    }
-   
+
    menu, ol, ul {
        list-style-type: none;
        margin: 0;
        padding: 0;
    }
-   </style>
+  </style>
   <title>Document</title>
 </head>
 <body>
   <div class="desktop-58">
-    <img class="logobottom-1" src="logobottom-10.svg" />
+    <img class="logobottom-1" src="/static/logobottom-10.svg" />
     <div class="frame-70">
       <div class="frame-69">
         <div class="about">ABOUT</div>
         <div class="frame-68">
           <div class="frame-51">
             <div class="rectangle-3997"></div>
-            <img class="img-7989-1" src="img-7989-10.png" />
+            <img class="img-7989-1" src="/static/img-7989-10.png" />
           </div>
           <div class="frame-67">
-            <img class="daname-1" src="daname-10.svg" />
+            <img class="daname-1" src="/static/daname-10.svg" />
             <div
               class="i-aim-to-bring-my-ideas-to-life-without-being-bound-by-conventions-my-work-spans-across-various-digital-media-including-games-web-applications-and-interactive-art-always-focusing-on-the-essence-rather-than-the-medium-for-me-technology-is-merely-a-tool-what-truly-matters-is-conveying-a-feeling-or-sparking-movement-in-someone-s-mind-i-value-efficiency-and-authenticity-above-all-i-don-t-showcase-work-i-m-not-proud-of-and-i-always-listen-to-feedback-without-resistance-i-stay-open-to-new-tools-and-platforms-and-i-enjoy-experimenting-and-prototyping-as-part-of-the-creative-process-at-the-heart-of-everything-i-do-is-the-drive-to-turn-imagination-into-something-real-something-that-might-surprise-delight-or-quietly-make-someone-stop-and-think"
             >
@@ -94,7 +93,7 @@
             </div>
             <div class="frame-63">
               <div class="rectangle-4003"></div>
-              <img class="img-5408-1" src="img-5408-10.png" />
+              <img class="img-5408-1" src="/static/img-5408-10.png" />
               <div class="rectangle-4010"></div>
             </div>
           </div>
@@ -114,7 +113,7 @@
             </div>
             <div class="frame-63">
               <div class="rectangle-4003"></div>
-              <img class="img-5408-1" src="img-5408-11.png" />
+              <img class="img-5408-1" src="/static/img-5408-11.png" />
               <div class="rectangle-4010"></div>
             </div>
           </div>
@@ -133,7 +132,7 @@
             </div>
             <div class="frame-63">
               <div class="rectangle-4003"></div>
-              <img class="img-5408-1" src="img-5408-12.png" />
+              <img class="img-5408-1" src="/static/img-5408-12.png" />
               <div class="rectangle-4010"></div>
             </div>
           </div>
@@ -158,7 +157,7 @@
             </div>
             <div class="frame-63">
               <div class="rectangle-4003"></div>
-              <img class="img-5408-1" src="img-5408-13.png" />
+              <img class="img-5408-1" src="/static/img-5408-13.png" />
               <div class="rectangle-4010"></div>
             </div>
           </div>
@@ -167,7 +166,7 @@
               <div class="frame-71">
                 <div class="name">hands &amp; symbols</div>
                 <div
-                  class="musam-is-a-2-d-art-project-that-explores-visual-rhythm-and-composition-through-the-lens-of-digital-minimalism-created-entirely-using"
+                  class="musam-is-a-2-d-art-project-that-seeks-to-uncover-and-transform-the-digitized-desires-of-human-beings"
                 >
                   “Hands and Symbols” is an interactive media art piece that seeks
                   to uncover and transform the digitized desires of human beings.
@@ -177,7 +176,7 @@
             </div>
             <div class="frame-63">
               <div class="rectangle-4003"></div>
-              <img class="img-5408-1" src="img-5408-14.png" />
+              <img class="img-5408-1" src="/static/img-5408-14.png" />
               <div class="rectangle-4010"></div>
             </div>
           </div>
@@ -197,7 +196,7 @@
             </div>
             <div class="frame-63">
               <div class="rectangle-4003"></div>
-              <img class="img-5408-1" src="img-5408-15.png" />
+              <img class="img-5408-1" src="/static/img-5408-15.png" />
               <div class="rectangle-4010"></div>
             </div>
           </div>
@@ -218,7 +217,7 @@
             </div>
             <div class="frame-63">
               <div class="rectangle-4003"></div>
-              <img class="img-5408-1" src="img-5408-16.png" />
+              <img class="img-5408-1" src="/static/img-5408-16.png" />
               <div class="rectangle-4010"></div>
             </div>
           </div>
@@ -226,9 +225,7 @@
             <div class="frame-59">
               <div class="frame-71">
                 <div class="name">Your improper emoti...</div>
-                <div
-                  class="musam-is-a-2-d-art-project-that-explores-visual-rhythm-and-composition-through-the-lens-of-digital-minimalism-created-entirely-using"
-                >
+                <div class="musam-is-a-2-d-art-project-that-explores-visual-rhythm-and-composition-through-the-lens-of-digital-minimalism-created-entirely-using">
                   Your improper emotional API calls have caused 37 consecutive
                   engine failures in my cardiac rendering pipeline.
                 </div>
@@ -237,7 +234,7 @@
             </div>
             <div class="frame-63">
               <div class="rectangle-4003"></div>
-              <img class="img-5408-1" src="img-5408-17.png" />
+              <img class="img-5408-1" src="/static/img-5408-17.png" />
               <div class="rectangle-4010"></div>
             </div>
           </div>
@@ -245,9 +242,7 @@
             <div class="frame-59">
               <div class="frame-71">
                 <div class="name">At the end of countl...</div>
-                <div
-                  class="musam-is-a-2-d-art-project-that-explores-visual-rhythm-and-composition-through-the-lens-of-digital-minimalism-created-entirely-using"
-                >
+                <div class="musam-is-a-2-d-art-project-that-explores-visual-rhythm-and-composition-through-the-lens-of-digital-minimalism-created-entirely-using">
                   This work uses converging cones toward a single point to
                   symbolize humanity’s collective journey toward a shared essence
                   or purpose.
@@ -257,7 +252,7 @@
             </div>
             <div class="frame-63">
               <div class="rectangle-4003"></div>
-              <img class="img-5408-1" src="img-5408-18.png" />
+              <img class="img-5408-1" src="/static/img-5408-18.png" />
               <div class="rectangle-4010"></div>
             </div>
           </div>
@@ -266,8 +261,8 @@
     </div>
     <div class="group-189">
       <div class="rectangle-4007"></div>
-      <img class="logodasvg-1" src="logodasvg-10.svg" />
-      <img class="vector-230-1" src="vector-230-10.svg" />
+      <img class="logodasvg-1" src="/static/logodasvg-10.svg" />
+      <img class="vector-230-1" src="/static/vector-230-10.svg" />
       <div class="frame-50">
         <div class="about2">ABOUT</div>
         <div class="project2">PROJECT</div>
